--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: blog
-title: Nikolaos Zioulis
+title: index
 permalink: /
 ---
+
 
 <meta content="Nick's Place" property="og:site_name">
 <meta content="Nikolaos Zioulis" property="og:title">
@@ -13,7 +14,7 @@ permalink: /
   <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
   <meta content="{{ site.url }}/about/" property="article:author">
 {% endif %}
- <meta content="https://zokin.github.io/assets/img/avatar.png" property="og:image">
+ <meta content="https://zokin.github.io/assets/img/avatar_pastel.png" property="og:image">
 {% if page.categories %}
   {% for category in page.categories limit:1 %}
   <meta content="{{ category }}" property="article:section">
