added academic icon font
changed urls to dois

--- a/index.html
+++ b/index.html
@@ -98,4 +98,8 @@ permalink: /
 }
 </style>
 <link href="/static/css/bibbase.css" rel="stylesheet">
+<link rel="stylesheet" href="/static/assets/fonts/academicons.min.css"/>
 
+<!--<link rel="stylesheet" href="http://bibbase.org/css/styles/default.css" type="text/css" media="screen">-->
+<!--<link rel="stylesheet" href="http://bibbase.org/css/styles/common.css" type="text/css" media="screen">-->
+<!--<link rel="stylesheet" href="http://bibbase.org/css/styles/hide_text.css" type="text/css" media="screen">-->
